// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the <SubHeader /> component should render 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.h2) />
</ForwardRef(styled.div)>
`;

exports[`the <SubHeader /> component should render with a dynamic title 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.h2)>
    Test Application Test
  </ForwardRef(styled.h2)>
</ForwardRef(styled.div)>
`;

exports[`the <SubHeader /> component should render with a form button 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.h2) />
  <ForwardRef(Styled(Button))
    onClick={[Function]}
  >
    + Add Review
  </ForwardRef(Styled(Button))>
</ForwardRef(styled.div)>
`;

exports[`the <SubHeader /> component should render with a goBack button 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(Styled(Button))
    onClick={[Function]}
  >
    &lt; Go Back
  </ForwardRef(Styled(Button))>
  <ForwardRef(styled.h2) />
</ForwardRef(styled.div)>
`;
